--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "engines": {
     "node": ">= 4.0"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@glimmer/test-helpers": "^0.30.0"
+  }
 }
