--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/qunit": "^2.0.31",
     "broccoli": "^1.1.2",
     "broccoli-asset-rev": "^2.5.0",
+    "broccoli-funnel": "^1.2.0",
     "ember-cli": "^2.14.0",
     "ember-cli-dependency-checker": "^2.0.1",
     "ember-cli-inject-live-reload": "^1.6.1",
