--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "ember-cli-sass": "^6.2.0",
     "ember-cli-uglify": "^2.0.0-beta.1",
     "qunitjs": "^2.3.3",
-    "typescript": "^2.2.2"
+    "typescript": "^2.2.2",
+    "babel-plugin-glimmer-inline-precompile": "^1.2.0"
   },
   "engines": {
     "node": ">= 4.0"
