--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@glimmer/test-helpers": "^0.30.0",
     "@glimmer/web-component": "^0.2.0",
     "@glimmer/interfaces": "^0.26.2",
+    "@glimmer/wire-format": "^0.26.2",
     "@types/qunit": "^2.0.31",
     "broccoli": "^1.1.2",
     "broccoli-asset-rev": "^2.5.0",
