Changed travis script to move dist content to gh-pages

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,4 +38,13 @@ install:
     - npm install
 
 script:
-    - ember test --server
+    - ember b -p
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  local_dir: dist
+  target_branch: gh-pages
+  on:
+    branch: master
