--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ install:
 - export PATH=$PWD/travis-phantomjs:$PATH
 - npm install
 script:
-- ember b -p
+- ember b
 deploy:
   provider: pages
   skip_cleanup: true
