--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@glimmer/application-pipeline": "^0.8.0",
     "@glimmer/blueprint": "^0.5.0",
     "@glimmer/inline-precompile": "^1.0.0",
+    "@glimmer/interfaces": "^0.26.2",
     "@glimmer/resolver": "^0.3.0",
     "@glimmer/test-helpers": "^0.30.0",
     "@glimmer/web-component": "^0.2.0",
-    "@glimmer/interfaces": "^0.26.2",
     "@glimmer/wire-format": "^0.26.2",
     "@types/qunit": "^2.0.31",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-glimmer-inline-precompile": "^1.2.0",
     "broccoli": "^1.1.2",
     "broccoli-asset-rev": "^2.5.0",
     "broccoli-funnel": "^1.2.0",
@@ -31,9 +33,7 @@
     "ember-cli-sass": "^6.2.0",
     "ember-cli-uglify": "^2.0.0-beta.1",
     "qunitjs": "^2.3.3",
-    "typescript": "^2.2.2",
-    "babel-plugin-glimmer-inline-precompile": "^1.2.0",
-    "babel-plugin-external-helpers": "^6.22.0"
+    "typescript": "^2.2.2"
   },
   "engines": {
     "node": ">= 4.0"
