--- a/package.json
+++ b/package.json
@@ -11,29 +11,32 @@
     "start": "ember server",
     "test": "ember test"
   },
+  "dependencies": {
+    "@glimmer/test-helpers": "^0.30.0"
+  },
   "devDependencies": {
     "@glimmer/application": "^0.7.2",
     "@glimmer/application-pipeline": "^0.8.0",
     "@glimmer/blueprint": "^0.5.0",
+    "@glimmer/compiler": "^0.26.2",
+    "@glimmer/component": "^0.6.0",
     "@glimmer/inline-precompile": "^1.0.0",
     "@glimmer/interfaces": "^0.26.2",
     "@glimmer/resolver": "^0.3.0",
     "@glimmer/test-helpers": "^0.30.0",
     "@glimmer/web-component": "^0.2.0",
     "@glimmer/wire-format": "^0.26.2",
-    "@glimmer/compiler": "^0.26.2",
-    "@glimmer/component": "^0.6.0",
     "@types/qunit": "^2.0.31",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-glimmer-inline-precompile": "^1.2.0",
     "broccoli": "^1.1.2",
-    "broccoli-asset-rev": "^2.5.0",
+    "broccoli-asset-rev": "^2.4.5",
     "broccoli-funnel": "^1.2.0",
-    "ember-cli": "^2.14.0",
-    "ember-cli-dependency-checker": "^2.0.1",
-    "ember-cli-inject-live-reload": "^1.6.1",
+    "ember-cli": "~2.14.1",
+    "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-sass": "^6.2.0",
-    "ember-cli-uglify": "^2.0.0-beta.1",
+    "ember-cli-uglify": "^1.2.0",
     "ember-cli-updater": "^1.0.0",
     "qunitjs": "^2.3.3",
     "typescript": "^2.2.2"
@@ -41,8 +44,5 @@
   "engines": {
     "node": ">= 4.0"
   },
-  "private": true,
-  "dependencies": {
-    "@glimmer/test-helpers": "^0.30.0"
-  }
+  "private": true
 }
