--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-glimmer-inline-precompile": "^1.2.0",
     "broccoli": "^1.1.2",
-    "broccoli-asset-rev": "^2.4.5",
+    "broccoli-asset-rev": "^2.5.0",
     "broccoli-funnel": "^1.2.0",
     "ember-cli": "~2.14.1",
-    "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-dependency-checker": "^2.0.1",
+    "ember-cli-inject-live-reload": "^1.6.1",
     "ember-cli-sass": "^6.2.0",
-    "ember-cli-uglify": "^1.2.0",
+    "ember-cli-uglify": "^2.0.0-beta.1",
     "ember-cli-updater": "^1.0.0",
     "qunitjs": "^2.3.3",
     "typescript": "^2.2.2"
