--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "broccoli": "^1.1.2",
     "broccoli-asset-rev": "^2.5.0",
     "broccoli-funnel": "^1.2.0",
+    "ember-chrome-devtools": "^0.1.1",
     "ember-cli": "~2.14.1",
     "ember-cli-dependency-checker": "^2.0.1",
     "ember-cli-inject-live-reload": "^1.6.1",
